@@ -12,5 +12,6 @@
 #define		BANNED_YEAR			"Releases from %s are not allowed here!"	/* %s = year		 */
 #define		BANNED_BITRATE			"%s kbit codec is not allowed here!"		/* %s = bitrate		 */
 #define		DUPE_NFO			"NFO-File: DUPE!"
+#define		ZIP_NFO				"NFO-File: Not allowed here!"
 #define		SPEEDTEST			"Speedtest: Uploaded %.1fMbits @ %.2fMbps."
 
