@@ -1,3 +1,3 @@
 #include "ng-version.h"
 
-const char* ng_version(void) { const char* NG_Version = "1.0.4.r2149"; return NG_Version; }
+const char* ng_version(void) { const char* NG_Version = "1.0.4.r2192"; return NG_Version; }
